[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapistarter-l7"
version = "0.1.0"
description = "FastAPI Lab 7 Deployment"
dependencies = [
    "fastapi[standard]",
    "sqlmodel",
    "jinja2",
    "pwdlib[argon2]",
    "pydantic[email]",
    "python-multipart",
    "python-jose[cryptography]",
    "psycopg2-binary"  # <-- ADDED FOR LAB 7
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx"
]